# distributed_system_mid

./: .gitignore  CMakeLists.txt  README.md  definitions.h  dsClient.cpp  dsClient.h  dsServer.cpp  dsServer.h  main.cpp  main2.cpp  manageTable.cpp  manageTable.h  printTable.cpp
.github/ISSUE_TEMPLATE/: refactory-request.md
docs/: Doxyfile.in
dsmodule_dir/: CMakeLists.txt
dsmodule_dir/include/ds/: definitions.hpp  dsClient.hpp  dsServer.hpp  heartBeat.hpp  manageTable.hpp  message.hpp  moduleDS.hpp
dsmodule_dir/src/: dsClient.cpp  dsServer.cpp  heartBeat.cpp  manageTable.cpp  message.cpp  moduleDS.cpp
models/: model.mdj
